[package]
name = "cli-logger"
version = "0.1.0"
edition = "2021"
description = "Basic logger with oxidized batteries included"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/cli-logger"
keywords = ["cli", "log", "logger", "logging"]

[dependencies]
cli-panics = "0.1.0"
env_logger = "0.10.0"
log = "0.4.18"
